# paper-extracting

./: .gitignore  app.py  audit_final_all_detailed.md  column_labels.xlsx  config.cohort.toml  config.final.toml  config.toml  done.txt  final_result.xlsx  fixer.py  inspect_pdf.py  molgenis_DataCatalogueFlat.csv  molgenis_UMCGCohortsStaging.xlsx  prompts.toml  prompts_cohort.toml  pyproject.toml  readme.md  run_cluster_cohort.sbatch  setup_cluster_runtime.sbatch  setup_cluster_runtime.sh
.history/: config_20251112140034.toml  config_20251112140625.toml  config_20251118160702.toml  config_20251118161542.toml  config_20251118162033.toml  config_20251118162055.toml  config_20251119132647.toml  config_20251119133443.toml  config_20251119133802.toml  config_20251119134050.toml  config_20251119134740.toml  config_20251119134917.toml  config_20251119135108.toml  config_20251119144401.toml  config_20251119144804.toml  config_20251119151356.toml  config_20251119151827.toml  config_20251119152401.toml  config_20251119152836.toml  config_20251119153238.toml  config_20251119155752.toml  config_20251119160154.toml  config_20251119161312.toml  config_20251119161907.toml  config_20251119162341.toml  config_20251119162441.toml  config_20251119162505.toml  config_20251119162805.toml  config_20251119162826.toml  config_20251119163446.toml  config_20251125120242.toml  config_20251125121138.toml  config_20251125122820.toml  config_20251125124228.toml  config_20251125124444.toml  config_20251125125703.toml  config_20251125130931.toml  config_20251125130952.toml  config_20251125131407.toml  config_20251125132602.toml  (+35 more)
data/: Resources.csv  (+4 more)
(+83 files in other folders)
