[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-extract"
version = "0.1.0"
description = "PDF → cohort workbook extraction pipeline"
readme = "readme.md"
authors = [{name = "you"}]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
  "pypdf>=4.2.0",
  "openpyxl>=3.1.0",
  "tomli>=2.0.1; python_version<'3.11'",
]

[project.scripts]
pdf-extract = "main_cohort:cli"

[tool.setuptools]
py-modules = [
  "cohort_dynamic_prompts",
  "cohort_prompt_schema_updater",
  "cohort_runtime_utils",
  "emx2_dynamic_runtime",
  "extract_pipeline",
  "fix_molgenis_staging_types_callable",
  "fix_molgenis_staging_types_dynamic",
  "llm_client",
  "llm_grammar",
  "main_cohort",
  "map_countries_ontology",
  "map_regions_ontology",
]

[tool.setuptools.package-dir]
"" = "src"
